--- a/app/src/main/res/layout/item_people.xml
+++ b/app/src/main/res/layout/item_people.xml
@@ -5,12 +5,17 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="com.tr1984.mergeadaptersample.viewmodel.PeopleViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffffff"
+        android:onClick="@{() -> viewModel.increaseCount()}"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
         android:paddingEnd="20dp"
@@ -33,24 +38,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:text="@{viewModel.name}"
             app:layout_constraintBottom_toTopOf="@id/desc01"
             app:layout_constraintStart_toEndOf="@id/thumbnail"
             app:layout_constraintTop_toTopOf="@id/thumbnail"
             app:layout_constraintVertical_chainStyle="packed"
             tools:text="Name" />
 
-        <ImageView
+        <TextView
             android:id="@+id/desc01"
             android:layout_width="0dp"
-            android:layout_height="15dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
-            android:background="@drawable/rect_skeleton_gray"
+            android:text="@{viewModel.status}"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@id/desc02"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/name"
             app:layout_constraintTop_toBottomOf="@id/name"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="Clicked: 0" />
 
         <ImageView
             android:id="@+id/desc02"
